--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,12 +45,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\ControladorScript.cs" />
-     <Compile Include="Assets\FallingObjectMovement.cs" />
-     <Compile Include="Assets\FloorActions.cs" />
-     <Compile Include="Assets\PlatoScript.cs" />
-     <Compile Include="Assets\PlayerMovement.cs" />
-     <Compile Include="Assets\VinoScript.cs" />
+     <Compile Include="Assets\Scripts\ControladorScript.cs" />
+     <Compile Include="Assets\Scripts\FallingObjectMovement.cs" />
+     <Compile Include="Assets\Scripts\FloorActions.cs" />
+     <Compile Include="Assets\Scripts\GameManager.cs" />
+     <Compile Include="Assets\Scripts\HighScoreManager.cs" />
+     <Compile Include="Assets\Scripts\InputNameScript.cs" />
+     <Compile Include="Assets\Scripts\MenuScript.cs" />
+     <Compile Include="Assets\Scripts\PlatoScript.cs" />
+     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\ScoreControl.cs" />
+     <Compile Include="Assets\Scripts\VinoScript.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
