Presionando 'P' se pausa el juego, y queda todo congelado hasta presionar nuevamente 'P' Presionando 'Escape' se termina el juego con puntaje 0

--- a/videojuego-platos-master.CSharp.csproj
+++ b/videojuego-platos-master.CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\Scripts\ScoreControl.cs" />
     <Compile Include="Assets\Scripts\Utilidades.cs" />
     <Compile Include="Assets\Scripts\VinoScript.cs" />
+    <Compile Include="Assets\Scripts\pauseScript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
