--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{D2365178-8675-29DC-1811-5B0FEC04CEDC}</ProjectGuid>
+    <ProjectGuid>{B2D0E20B-6321-0B34-4161-6D3C901BB1E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\ScoreControl.cs" />
      <Compile Include="Assets\Scripts\Utilidades.cs" />
      <Compile Include="Assets\Scripts\VinoScript.cs" />
+     <Compile Include="Assets\Scripts\pauseScript.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
